# career-compass

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  deepdive.html  explore.html  index.html  llms.txt  manifest.json  professions.md  result.html  result2.html  robots.txt  sitemap-careers.xml  sitemap-core.xml  sitemap.xml  supabase_schema.sql  sw.js  test.html  timeline.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_correction.md  feature_request.md
.github/workflows/: deploy.yml  validate.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  deps.py  main.py  models.py  ratelimit.py
backend/app/routers/: ai.py  results.py  sessions.py
backend/app/services/: cache.py  gemini.py
backend/migrations/: 001_init.sql  002_sessions.sql
data/: deep_dive_questions.json  i18n.json  profession_tags.json  professions.json  questions.json  riasec_edges.json  riasec_people.json
docs/: DEPLOY.md  MIGRATION.md
scripts/: build_profession_pages.mjs  fill_day_in_life.py  fix_riasec_vectors.py  gen_icons.py  gen_og_image.py  gen_riasec_edges.mjs  generate_tags.mjs  migrate_supabase_to_neon.sh  parse_professions.mjs  validate_data.mjs
src/: ai.js  ai_ui.js  analytics.js  app.js  charts.js  consent.js  deep_dive_engine.js  deepdive_app.js  explore.js  i18n.js  match.js  match.test.mjs  path_parse.js  render.js  share_card.js  store.js  strings.js  timeline.js
styles/: main.css
