[project]
name = "career-compass-api"
version = "1.0.0"
description = "Career Compass backend — Neon Postgres result capture + Gemini AI proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "google-genai>=0.3",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

# This is an application, not an installable library: tell uv NOT to build/install
# the project itself (only its dependencies). Without this, setuptools tries to
# package the source and fails with "Multiple top-level packages discovered in a
# flat-layout: ['app', 'migrations']".
[tool.uv]
package = false

# Pin the ASGI entrypoint so FastAPI Cloud runs the right app object.
[tool.fastapi]
entrypoint = "app.main:app"
