[project]
name = "career-compass-api"
version = "1.0.0"
description = "Career Compass backend — Neon Postgres result capture + Gemini AI proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "google-genai>=0.3",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

# FastAPI Cloud's build installs this project, so give setuptools an explicit
# build backend and package list. Without this, its flat-layout auto-discovery
# sees both app/ and migrations/ and aborts with
# "Multiple top-level packages discovered in a flat-layout: ['app', 'migrations']".
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers", "app.services"]

# Pin the ASGI entrypoint so FastAPI Cloud runs the right app object.
[tool.fastapi]
entrypoint = "app.main:app"
